--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tauri-plugin-serialport-api",
-  "version": "0.0.9",
+  "name": "@kuyoonjo/tauri-plugin-serialport-api",
+  "version": "0.1.0",
   "author": "lzhida <zhidal@qq.com>",
   "description": "A tauri plugin developed based on Serialport.",
   "type": "module",
