--- a/examples/svelte-app/src-tauri/Cargo.toml
+++ b/examples/svelte-app/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ rust-version = "1.76"
 serde_json = "1.0"
 serde = { version = "1.0", features = [ "derive" ] }
 tauri = { version = "1", features = ["api-all"] }
-tauri-plugin-serialport = { path = "../../../" }
+tauri-plugin-serialport-v1 = { path = "../../../" }
 
 [build-dependencies]
 tauri-build = { version = "1", features = [] }
